# AIHG-Wearable

./: README.md
UAT/: UAT.html
data_preprocessing/: clean_raw_data_huggingface.py
data_preprocessing/EDA/: EDA Capstone - PMData.ipynb  pre-processing.ipynb  sleep_processed_data.csv  sleep_processed_shortdata.csv  sleep_processed_summary.csv  slp_score_data.csv  wellness_data.csv
data_preprocessing/GAN-testing/: GAN-testing.ipynb  GAN_synthesiser.ipynb
data_preprocessing/GAN-testing/GAN_generated_data/: overall_sleep_synthesised_100_participants.csv  sleep_score_synthesised_100_participants.csv  wellness_synthesised_100_participants.csv
data_preprocessing/LLM-testing/: WellnessDataTest.py  dailyActivity_Generator.py  rfr.py  sleepDay_Generator.py  sleepDay_merged.csv  synthetic_dailyActivity.csv  synthetic_sleepDay.csv  synthetic_wellness_data.csv  tsnewellness.py  wellness.py  wellness16.py  wellness_data.csv
data_preprocessing/datasets/: cleaned_and_split_nutrition_dataset.csv  data_extraction.ipynb
data_preprocessing/datasets/Final_Dataset/: dailyActivity_merged.csv  sleepDay_merged.csv  sleepDay_merged.csv (derived).csv  weightLogInfo_merged.csv
data_preprocessing/datasets/Kaggle_Dataset/: dailyActivity_merged.csv
experiments/: Flower_FL_DPTest.csv  Flower_FL_DPTest.xlsx
models/: README.md
models/Flower/: README.md  pyproject.toml
models/Flower/fl/: __init__.py  (+3 more)
models/Flower/fl2/: pyproject.toml
models/Flower/fl2/fl2/: server_app.py  task.py
uat/: UAT.html
utils/: health_advisor.py
utils/healthadvisorAPK/: buildozer.spec  main.py
(+18 files in other folders)
